feat: prediction
